--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,8 @@
   "devDependencies": {
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
-    "typescript": "^5.2.2",
-    "craco": "^7.1.0",
-    "@craco/craco": "^7.1.0",
+    "typescript": "^4.x.x",
+    "@craco/craco": "^@7.1.0",
     "react-scripts": "^5.0.1"
   },
   "scripts": {
